build: remove extension from database devcontainer
Unnecessary extension for database devcontainer that was not effective
in development has been removed.

--- a/.devcontainer/database/devcontainer.json
+++ b/.devcontainer/database/devcontainer.json
@@ -5,12 +5,5 @@
   "workspaceFolder": "/workspace",
   "shutdownAction": "stopCompose",
   "containerUser": "vscode",
-  "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "ms-ossdata.vscode-postgresql"
-      ]
-    }
-  }
+  "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}"
 }
