--- a/.devcontainer/database/compose.yaml
+++ b/.devcontainer/database/compose.yaml
@@ -22,8 +22,8 @@ services:
     volumes:
     - postgres-data:/var/lib/postgresql/data:rw,z
     - postgresql-socket:/var/run/postgresql:rw,z
-    - ../../database/configuration/pg_hba.conf:/etc/postgresql/pg_hba.conf
-    - ../../database/configuration/postgresql.conf:/etc/postgresql/postgresql.conf
+    - ../../database/configuration/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro,Z
+    - ../../database/configuration/postgresql.conf:/etc/postgresql/postgresql.conf:ro,Z
     - ../../database:/usr/local/src/postgresql:ro,z
     command:
     - -c
@@ -43,4 +43,4 @@ secrets:
   sqitch_config:
     file: ./sqitch.conf
   db_password:
-    file: ./POSTGRES_PASSWORD
+    file: ../common/POSTGRES_PASSWORD
