build: use devcontainer features
Devcontainer features are better supported instead of creating a
Containerfile for every image. Previously, custom Containerfiles were
used in favor of devcontainer features because a bug introduced in
devcontainer-cli versions newer than 0.58.0 preventing devcontainer
from working with Podman. Devcontainer features are now used instead
and workarounds for common Podman issues with devcontainer are
suggested in documentation.

--- a/.devcontainer/backend/compose.yaml
+++ b/.devcontainer/backend/compose.yaml
@@ -1,8 +1,6 @@
 services:
   dev-machine:
-    build:
-      context: .
-      dockerfile: development.Containerfile
+    image: mcr.microsoft.com/devcontainers/java:21-bookworm
     security_opt:
     - no-new-privileges:true
     command: sleep infinity
@@ -32,6 +30,7 @@ services:
 
 volumes:
   postgres-data:
+    external: true
   postgresql-socket:
 
 secrets:
