--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-.devcontainer/common/POSTGRES_PASSWORD
-.devcontainer/database/sqitch.conf
+# Prevent devcontainer secrets from being leaked
+.devcontainer/**/POSTGRES_PASSWORD
+.devcontainer/**/sqitch.conf
