--- a/.devcontainer/development/devcontainer.json
+++ b/.devcontainer/development/devcontainer.json
@@ -1,9 +1,9 @@
 {
-  "name": "java-dev",
-  "dockerComposeFile": "compose.yaml",
+  "name": "development",
+  "dockerComposeFile": "../compose.yaml",
   "service": "dev-machine",
   "workspaceFolder": "/workspace",
-  "shutdownAction": "stopCompose",
+  "shutdownAction": "none",
   "containerUser": "vscode",
   "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
   "features": {
