--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=roller
+spring.datasource.url=jdbc:postgresql://db:5432/saorpg
+spring.datasource.username=saorpg
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+com.saorpg.roller.versionRef=a
