feature: use nginx as a reverse proxy
Client-sided calls from the frontend web pages to the backend may fail
or not work as expected due to cors and security modes. Using a reverse
proxy allows the backend and frontend to originate from the same host
and port but using different paths.

--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -43,6 +43,21 @@ services:
     secrets:
     - postgres_admin_password
 
+  proxy:
+    image: nginxinc/nginx-unprivileged
+    security_opt:
+    - no-new-privileges:true
+    environment:
+      API_SERVER_CONTAINER: dev-machine
+      FRONTEND_SERVER_CONTAINER: dev-machine
+    ports:
+      - 8080:8080
+    volumes:
+    - ../infrastructure/src/nginx/templates:/etc/nginx/templates:ro,Z
+    networks:
+      - external
+      - internal
+
 volumes:
   postgres-data:
     external: true
