--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 spring.application.name=roller
 spring.datasource.url=jdbc:postgresql://db:5432/saorpg
 spring.datasource.username=saorpg
