build: introduce draft of compose spec
The compose spec is intended to be used for production environments.
Tested separately from the devcontainer.

--- a/database/configuration/pg_hba.conf
+++ b/database/configuration/pg_hba.conf
@@ -114,4 +114,7 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-local   all             all                                     scram-sha-256
+# Trust connections from specific containers only for the saorpg db and user
+local   all             all                                     trust
+host    saorpg          saorpg          backend                 trust
+host    saorpg          saorpg          sqitch                  trust
