--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -13,6 +13,7 @@ services:
       - internal
     environment:
       SQITCH_USER_CONFIG: /run/secrets/sqitch_config
+      DATABASE_SERVICE_NAME: db
     secrets:
     - sqitch_config
 
@@ -29,8 +30,6 @@ services:
     - ../database/configuration/postgresql.conf:/etc/postgresql/postgresql.conf:ro,Z
     - ../database:/usr/local/src/postgresql:ro,Z
     - ../database/src/shell:/docker-entrypoint-initdb.d:ro,Z
-    ports:
-    - 5432
     networks:
     - internal
     command:
