--- a/infrastructure/src/docker/compose.yaml
+++ b/infrastructure/src/docker/compose.yaml
@@ -36,7 +36,7 @@ services:
     security_opt:
     - no-new-privileges:true
     volumes:
-    - staging-postgres-data:/var/lib/postgresql/data:rw
+    - ../../../postgresql-live-data:/var/lib/postgresql/data:rw
     - ../../../database/configuration/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
     - ../../../database/configuration/postgresql.conf:/etc/postgresql/postgresql.conf:ro
     - ../../../database/src/shell:/docker-entrypoint-initdb.d:ro
@@ -84,6 +84,3 @@ networks:
   external:
   internal:
     internal: true
-
-volumes:
-  staging-postgres-data: 
