refactor: move compose specs to root directory
Moving the compose specification files to the root directory makes it
clearer of the paths used by the compose files and the Containerfiles
to the build context.

--- a/.devcontainer/database/devcontainer.json
+++ b/.devcontainer/database/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "database",
-  "dockerComposeFile": "../compose.yaml",
+  "dockerComposeFile": "../../compose.dev.yaml",
   "service": "db",
   "workspaceFolder": "/usr/local/src/postgresql",
   "shutdownAction": "none",
