--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "@tanstack/react-query": "^5.75.7",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
