--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
     "@tanstack/react-query": "^5.75.7",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.43",
     "next": "15.2.4",
     "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
