refactor: fix formatting using prettier

--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,8 +1,6 @@
 {
   "tailwindConfig": "./tailwind.config.mjs",
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ],
+  "plugins": ["prettier-plugin-tailwindcss"],
   "tabWidth": 2,
   "useTabs": false
 }
