--- a/infrastructure/src/helm/templates/aws_secret_store.yaml
+++ b/infrastructure/src/helm/templates/aws_secret_store.yaml
@@ -15,6 +15,7 @@ spec:
     aws:
       service: SecretsManager
       region: us-west-1
+      role: arn:aws:iam::894865518514:role/saorpg-roller-aws-iam-role-sm
       auth:
         secretRef:
           accessKeyIDSecretRef:
