--- a/infrastructure/src/helm/values.yaml
+++ b/infrastructure/src/helm/values.yaml
@@ -53,3 +53,6 @@ secretManager: {}
   # Expected values:
   # accessKeyId: string (not base64-encoded)
   # secretAccessKey: string (not base64-encoded)
+
+cloudflare:
+  originCertName: cloudflare-origin-ca
