--- a/infrastructure/src/helm/templates/cnpg/cluster.yaml
+++ b/infrastructure/src/helm/templates/cnpg/cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: {{ include "saorpg-roller-db.fullname" . }}
+  name: {{ include "saorpg-roller.fullname" . }}
 spec:
   instances: {{ .Values.instanceCount }}
 
