--- a/infrastructure/src/ansible/full_deploy.yaml
+++ b/infrastructure/src/ansible/full_deploy.yaml
@@ -26,15 +26,10 @@
       name: external-secrets
       repo_url: "https://charts.external-secrets.io"
 
-  - name: Add apisix repository
+  - name: Add traefik repository
     kubernetes.core.helm_repository:
-      name: apisix
-      repo_url: "https://charts.apiseven.com"
-
-  - name: Add bitnami repository
-    kubernetes.core.helm_repository:
-      name: bitnami
-      repo_url: "https://charts.bitnami.com/bitnami"
+      name: traefik
+      repo_url: "https://traefik.github.io/charts"
 
   - name: Add external-dns repository
     kubernetes.core.helm_repository:
@@ -44,7 +39,7 @@
 - name: Install helm charts and manifests
   hosts: localhost
   vars_files:
-  - "vars/secret_manager_creds.yaml"
+  - "vars/secrets.yaml"
 
   tasks:
   - name: Install cloudnative-pg operator
@@ -77,48 +72,19 @@
       create_namespace: true
       release_namespace: external-secrets
 
-  - name: Install apisix ingress controller
-    kubernetes.core.helm:
-      name: apisix
-      chart_ref: apisix/apisix
-      create_namespace: true
-      release_namespace: apisix-ingress
-      values:
-        service:
-          type: LoadBalancer
-        # ~~API-driven mode is better due to less resources but this isn't working so...~~
-        # When installing manually with helm it doesn't work...
-        apisix:
-          deployment:
-            role_traditional:
-              config_provider: yaml
-          ssl:
-            enabled: true
-        etcd:
-          enabled: false
-        ingress-controller:
-          enabled: true
-          # Enabled passes other values in the object to the ingress-controller object
-          # ~~This has to be disabled because the publishService isn't included in the default which
-          # causes issues with external-dns.~~
-          # ... Actually it needs to be enabled to set up the IngressClass correctly. We'll just put a
-          # manual step to make sure the publishService is set.
-          gatewayProxy:
-            createDefault: true
-          config:
-            provider:
-              type: apisix-standalone
-
-  - name: Patch GatewayProxy
+  - name: Install experimental Gateway API CRDs
     kubernetes.core.k8s:
-      state: patched
-      api_version: apisix.apache.org/v1alpha1
-      kind: GatewayProxy
-      name: apisix-config
-      namespace: apisix-ingress
-      definition:
-        spec:
-          publishService: apisix-ingress/apisix-gateway
+      apply: true
+      src: "https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.3.0/experimental-install.yaml"
+
+  - name: Install traefik proxy
+    kubernetes.core.helm:
+      name: traefik
+      chart_ref: traefik/traefik
+      create_namespace: true
+      release_namespace: traefik
+      values_files:
+      - "{{ [playbook_dir, 'files/traefik_values.yaml'] | ansible.builtin.path_join }}"
 
   - name: Install external-dns controller
     kubernetes.core.helm:
@@ -137,19 +103,13 @@
             secretKeyRef:
               name: cloudflare-dns-creds
               key: CF_API_TOKEN
+        sources:
+        - gateway-tlsroute
+        - gateway-httproute
 
-  - name: Wait for prerequisites to be finished initializing
-    ansible.builtin.wait_for:
-      timeout: 60
+  # - name: Wait for prerequisites to be finished initializing
+  #   ansible.builtin.wait_for:
+  #     timeout: 120
 
-  - name: Install saorpg-roller helm chart
-    kubernetes.core.helm:
-      name: saorpg-roller
-      chart_ref: "{{ playbook_dir }}/../helm"
-      create_namespace: true
-      release_namespace: saorpg-roller
-      values:
-        secretManager:
-          accessKeyId: "{{ access_key_id }}"
-          secretAccessKey: "{{ secret_access_key }}"
-    no_log: true
+- name: Install saorpg-roller application
+  ansible.builtin.import_playbook: deploy_app.yaml
