--- a/infrastructure/src/helm/templates/cnpg/backup_object_store.yaml
+++ b/infrastructure/src/helm/templates/cnpg/backup_object_store.yaml
@@ -12,7 +12,7 @@ spec:
         key: S3_ACCESS_KEY_ID
       secretAccessKey:
         name: aws-s3-creds
-        key: S3_ACCESS_SECRET_KEY
+        key: S3_SECRET_ACCESS_KEY
     wal:
       compression: bzip2
   retentionPolicy: "30d"
