build: create npm script to build frontend image

--- a/frontend/Containerfile
+++ b/frontend/Containerfile
@@ -2,7 +2,7 @@ FROM node:22-bookworm AS builder
 
 WORKDIR /app
 
-COPY frontend .
+COPY . .
 
 RUN corepack enable pnpm && \
     pnpm install --frozen-lockfile && \
