build: add new tools to devcontainer
Added the following tools to the devcontainer: k3d, kubectl, helm,
access to the docker host from inside the devcontainer (for k3d
externally accessible), and ansible.

--- a/.devcontainer/development/devcontainer.json
+++ b/.devcontainer/development/devcontainer.json
@@ -12,6 +12,8 @@
       "installGradle": true,
       "gradleVersion": "8.12"
     },
-    "ghcr.io/devcontainers/features/node": {}
+    "ghcr.io/devcontainers/features/node": {},
+    "ghcr.io/devcontainers/features/kubectl-helm-minikube": {},
+    "ghcr.io/devcontainers/features/docker-outside-of-docker": {}
   }
 }
