--- a/.devcontainer/database/pg_hba.conf
+++ b/.devcontainer/database/pg_hba.conf
@@ -114,5 +114,5 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-host    saorpg         saorpg           all                     trust
-local   all            postgres                                 trust
+host    all             all             all                     trust
+local   all             postgres                                trust
