--- a/infrastructure/src/helmfile/environment/common/values.yaml
+++ b/infrastructure/src/helmfile/environment/common/values.yaml
@@ -1,5 +1,4 @@
 namespace:
-  externalSecrets: external-secrets
   saorpgRoller: saorpg-roller
   traefik: traefik
-  cnpg: cnpg-system
+  certManager: cert-manager
