--- a/infrastructure/src/helmfile/environment/development/values.yaml
+++ b/infrastructure/src/helmfile/environment/development/values.yaml
@@ -1,13 +1,7 @@
 traefik:
-  dashboard:
-    hostname: traefik-dashboard.docker.localhost
-  gateway:
-    listeners:
-      websecure:
-        certificateRefs:
-        - kind: Secret
-          name: local-selfsigned-tls
-          group: ""
+  wildcardHostname: "*.docker.localhost"
+  hostnames:
+    dashboard: traefik-dashboard.docker.localhost
 
 externalDns:
   enabled: false
