feat: use cloudflare origin ca in production
Using the cloudflare origin ca allows us to ensure the application is
secured with TLS encryption while connecting to Cloudflare

--- a/infrastructure/src/helmfile/environment/development/values.yaml
+++ b/infrastructure/src/helmfile/environment/development/values.yaml
@@ -2,6 +2,10 @@ traefik:
   wildcardHostname: "*.docker.localhost"
   hostnames:
     dashboard: traefik-dashboard.docker.localhost
+  certManager:
+    issuer: self-signed
+    originCAIssuer:
+      enabled: false
 
 externalDns:
   enabled: false
