--- a/infrastructure/src/helmfile/environment/common/values.yaml
+++ b/infrastructure/src/helmfile/environment/common/values.yaml
@@ -2,3 +2,7 @@ namespace:
   saorpgRoller: saorpg-roller
   traefik: traefik
   certManager: cert-manager
+
+origin-ca-issuer:
+  crds:
+    version: v0.13.0
