build: add database helm chart for dev work
Also cleaned up some older files

--- a/infrastructure/src/helmfile/environment/common/values.yaml
+++ b/infrastructure/src/helmfile/environment/common/values.yaml
@@ -2,6 +2,7 @@ namespace:
   saorpgRoller: saorpg-roller
   traefik: traefik
   certManager: cert-manager
+  developmentDatabase: dev-database
 
 origin-ca-issuer:
   crds:
