--- a/infrastructure/src/helmfile/environment/production/secrets.yaml.template
+++ b/infrastructure/src/helmfile/environment/production/secrets.yaml.template
@@ -1,2 +1,12 @@
 cloudflare:
   apiToken: null
+
+traefik:
+  dashboard:
+    password: null
+
+postgres:
+  user: null
+  password: null
+  database: null
+  host: null
