feat: add hostname config for helmfile using env

--- a/infrastructure/src/helmfile/environment/development/values.yaml
+++ b/infrastructure/src/helmfile/environment/development/values.yaml
@@ -2,6 +2,7 @@ traefik:
   wildcardHostname: "*.docker.localhost"
   hostnames:
     dashboard: traefik-dashboard.docker.localhost
+    roller: saorpg-roller.docker.localhost
   certManager:
     issuer: self-signed
     originCAIssuer:
