--- a/infrastructure/src/helmfile/environment/production/values.yaml
+++ b/infrastructure/src/helmfile/environment/production/values.yaml
@@ -2,6 +2,7 @@ traefik:
   wildcardHostname: "*.juhmertena.com"
   hostnames:
     dashboard: traefik-dashboard.juhmertena.com
+    roller: saorpg-roller.juhmertena.com
   certManager:
     issuer: origin-ca
     originCAIssuer:
