fix: use correct environment variable for jdbc uri

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 spring.application.name=roller
-spring.datasource.url=jdbc:postgresql://${DATABASE_SERVICE_NAME}:5432/saorpg
+spring.datasource.url=${DATABASE_JDBC_URI}
 spring.datasource.username=saorpg
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
