--- a/infrastructure/src/helmfile/environment/production/secrets.yaml.template
+++ b/infrastructure/src/helmfile/environment/production/secrets.yaml.template
@@ -1,5 +1,8 @@
 cloudflare:
-  apiToken: null
+  apiTokens:
+    dns: null
+    # Includes origin CA
+    tlsCertificates: null
 
 traefik:
   dashboard:
