fix: use valid name for originCaIssuer key

--- a/infrastructure/src/helmfile/environment/common/values.yaml
+++ b/infrastructure/src/helmfile/environment/common/values.yaml
@@ -4,6 +4,6 @@ namespace:
   certManager: cert-manager
   developmentDatabase: dev-database
 
-origin-ca-issuer:
+originCaIssuer:
   crds:
     version: v0.13.0
